fixed carousel spacing

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,15 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,300;0,400;0,700;1,400&display=swap');
+
+
+/* variables */
+:root {
+  --background: #213A42;
+  --foreground: #D4D3D1;
+  --myfont: Raleway;
+}
+
+
+
 
 
 
@@ -8,9 +19,15 @@ body {
 }
 
 body {
-  font-family: Montserrat;
+  font-family: var(--myfont);
   display: grid;
-  grid-template-rows: auto 1fr auto;
+  grid-template-rows: 5vh 1fr 5vh;
+  background-color:var(--background);
+  color:var(--foreground);
+}
+
+* {
+  box-sizing:border-box;
 }
 
 .hamburger {
@@ -25,10 +42,10 @@ body {
 }
 
 header#header_site {
-height:4vh;
-  display: flex;
-  justify-content: space-between;
-  align-items:center;
+display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: center;
 }
 
 .homepage main#main_site {
@@ -66,7 +83,7 @@ padding: 0;
 
 #nav_site ul li a {
   text-decoration: none;
-
+  color:var(--foreground);
   padding: 12px;
   display: block;
 }
@@ -74,28 +91,38 @@ padding: 0;
 h1 {
   font-size: 22px;
 }
+.slider main {
+  overflow-y:hidden;
+}
 
+.carousel {
+
+}
 .carousel-cell {
   width: 100%;
-  height: 92vh;
-  background: #222;
+  height: 90vh;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
 }
 
-.carousel.is-fullscreen .carousel-cell {
-  height: 100%;
-}
 
 .carousel-cell img {
   display: block;
+  width:auto;
+  height:auto;
+  max-width:100%;
   max-height: 100%;
 }
 
 
 @media screen and (orientation: landscape) {
- 
+  header#header_site {
+    display: flex;
+    justify-content: space-between;
+    align-items:center;
+  }
 
   #nav_site ul {
     flex-direction: row;
@@ -114,7 +141,7 @@ h1 {
 
 a#logo_home {
   display: block;
-
+padding:6px;
   height:100%;
 }
 
@@ -125,20 +152,22 @@ a#logo_home {
 
   height:100%;
   width:auto;
-  padding:6px;
+}
+main#main_site {
+  text-align: center;
 }
 
 /* desktop styles */
 @media screen and (orientation: landscape) {
-
+ header#header_site {
+   flex-direction: row;
+ }
 
   h1 {
     font-size: 42px;
 
   }
-main#main_site {
-  text-align: center;
-}
+
   .homepage main#main_site {
     flex-direction:row;
   justify-content: space-around
@@ -166,7 +195,7 @@ main#main_site {
 
 }
 footer#footer_site {
-  height:4vh;
+
   display: flex;
   justify-content: space-between;
 }
@@ -187,4 +216,23 @@ img.social-icon {
   height:24px;
   width: auto;
   display: block;
+}
+
+
+header#header_site h1 {
+font-style: normal;
+font-weight: bold;
+font-size: 36px;
+text-transform: uppercase;
+text-align:center;
+margin-top:12px;
+}
+
+header#header_site h2 {
+  font-style: normal;
+font-weight: 500;
+font-size: 18px;
+line-height: 21px;
+margin-top:8px;
+
 }
